--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.18.2+build.3
 loader_version=0.14.6
 
 # Mod Properties
-mod_version = 0.1.0-alpha.1
+mod_version = 0.1.0+1.18.2
 maven_group = com.github.thedeathlycow
 archives_base_name = tdc-data
 
